_docs/kustomize/akash-node/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akash-node
spec:
  selector:
    matchLabels:
      akash.network/component: akash-node
      app: akash-node
  template:
    metadata:
      labels:
        akash.network/component: akash-node
        app: akash-node
    spec:
      containers:
        - name: akash-node
          image: ghcr.io/akash-network/node:stable
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh", "/boot/run.sh"]
          ports:
            - name: akash-rpc
              containerPort: 26657
            - name: akash-p2p
              containerPort: 26656
          volumeMounts:
            - name: boot
              mountPath: /boot
              readOnly: true
            - name: data
              mountPath: /boot-data
              readOnly: true
            - name: keys
              mountPath: /boot-keys
              readOnly: true
      volumes:
        - name: boot
          configMap:
            name: akash-boot
        - name: data
          configMap:
            name: akash-data
        - name: keys
          secret:
            secretName: akash-keys
