_docs/kustomize/akash-node/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akash-node
spec:
  ingressClassName: "akash-ingress-class"
  rules:
    - host: akash.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: akash-node
                port:
                  name: akash-rpc
